services/product-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: order-service
    release: prometheus
spec:
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
